--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,10 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: public
-          fqdn: yacd.metacubex.one
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete Workflow Runs
+        uses: anaer/delete-workflow-runs@main
+        with:
+          retain_days: 3
+          keep_minimum_runs: 5
